curve fit interact

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -1,12 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click the button above to load the interactive widgets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:41:58.145387Z",
-     "start_time": "2020-04-01T16:41:58.137409Z"
+     "end_time": "2020-04-01T16:48:43.452167Z",
+     "start_time": "2020-04-01T16:48:43.440181Z"
     }
    },
    "outputs": [],
@@ -15,13 +22,13 @@
     "import numpy as np\n",
     "from scipy.integrate import odeint\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import Image\n",
-    "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
-    "\n",
     "from datetime import datetime,timedelta\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.optimize import fsolve\n",
+    "\n",
+    "from IPython.display import Image\n",
+    "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
     "\n",
     "from pandas.tseries.offsets import Week\n",
     "%matplotlib inline"
@@ -45,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:41:59.564406Z",
-     "start_time": "2020-04-01T16:41:59.559420Z"
+     "end_time": "2020-04-01T16:48:46.901625Z",
+     "start_time": "2020-04-01T16:48:46.885829Z"
     }
    },
    "outputs": [],
@@ -68,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:41:59.984477Z",
-     "start_time": "2020-04-01T16:41:59.981518Z"
+     "end_time": "2020-04-01T16:48:47.364426Z",
+     "start_time": "2020-04-01T16:48:47.359437Z"
     }
    },
    "outputs": [],
@@ -82,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:00.581273Z",
-     "start_time": "2020-04-01T16:42:00.261959Z"
+     "end_time": "2020-04-01T16:48:48.140797Z",
+     "start_time": "2020-04-01T16:48:47.823041Z"
     }
    },
    "outputs": [],
@@ -103,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:01.791943Z",
-     "start_time": "2020-04-01T16:42:01.785582Z"
+     "end_time": "2020-04-01T16:48:49.689301Z",
+     "start_time": "2020-04-01T16:48:49.679298Z"
     }
    },
    "outputs": [],
@@ -118,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:02.563369Z",
-     "start_time": "2020-04-01T16:42:02.559379Z"
+     "end_time": "2020-04-01T16:48:49.863184Z",
+     "start_time": "2020-04-01T16:48:49.860184Z"
     }
    },
    "outputs": [],
@@ -132,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:02.815154Z",
-     "start_time": "2020-04-01T16:42:02.800229Z"
+     "end_time": "2020-04-01T16:48:50.052451Z",
+     "start_time": "2020-04-01T16:48:50.044471Z"
     }
    },
    "outputs": [],
@@ -160,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 57,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:04.107777Z",
-     "start_time": "2020-04-01T16:42:04.102809Z"
+     "end_time": "2020-04-01T16:48:50.576910Z",
+     "start_time": "2020-04-01T16:48:50.572919Z"
     }
    },
    "outputs": [],
@@ -175,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:04.438233Z",
-     "start_time": "2020-04-01T16:42:04.424269Z"
+     "end_time": "2020-04-01T16:48:50.781983Z",
+     "start_time": "2020-04-01T16:48:50.767984Z"
     }
    },
    "outputs": [],
@@ -232,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:42:06.464906Z",
-     "start_time": "2020-04-01T16:42:06.313971Z"
+     "end_time": "2020-04-01T16:48:51.901727Z",
+     "start_time": "2020-04-01T16:48:51.753802Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eddf4e3b698a4848a453140be7210359",
+       "model_id": "9e4c61a38f8641138a58ef4bc5f33176",
        "version_major": 2,
        "version_minor": 0
       },
