update and convert nb

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:43.452167Z",
-     "start_time": "2020-04-01T16:48:43.440181Z"
+     "end_time": "2020-04-01T16:53:19.851997Z",
+     "start_time": "2020-04-01T16:53:18.574763Z"
     }
    },
    "outputs": [],
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:46.901625Z",
-     "start_time": "2020-04-01T16:48:46.885829Z"
+     "end_time": "2020-04-01T16:53:21.222599Z",
+     "start_time": "2020-04-01T16:53:21.215634Z"
     }
    },
    "outputs": [],
@@ -75,11 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:47.364426Z",
-     "start_time": "2020-04-01T16:48:47.359437Z"
+     "end_time": "2020-04-01T16:53:21.403045Z",
+     "start_time": "2020-04-01T16:53:21.399050Z"
     }
    },
    "outputs": [],
@@ -89,11 +89,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:48.140797Z",
-     "start_time": "2020-04-01T16:48:47.823041Z"
+     "end_time": "2020-04-01T16:53:22.490344Z",
+     "start_time": "2020-04-01T16:53:22.166916Z"
     }
    },
    "outputs": [],
@@ -110,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:49.689301Z",
-     "start_time": "2020-04-01T16:48:49.679298Z"
+     "end_time": "2020-04-01T16:53:23.619252Z",
+     "start_time": "2020-04-01T16:53:23.606854Z"
     }
    },
    "outputs": [],
@@ -125,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:49.863184Z",
-     "start_time": "2020-04-01T16:48:49.860184Z"
+     "end_time": "2020-04-01T16:53:23.784810Z",
+     "start_time": "2020-04-01T16:53:23.780821Z"
     }
    },
    "outputs": [],
@@ -139,11 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:50.052451Z",
-     "start_time": "2020-04-01T16:48:50.044471Z"
+     "end_time": "2020-04-01T16:53:24.268098Z",
+     "start_time": "2020-04-01T16:53:24.255131Z"
     }
    },
    "outputs": [],
@@ -167,11 +167,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:50.576910Z",
-     "start_time": "2020-04-01T16:48:50.572919Z"
+     "end_time": "2020-04-01T16:53:25.180460Z",
+     "start_time": "2020-04-01T16:53:25.175443Z"
     }
    },
    "outputs": [],
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:50.781983Z",
-     "start_time": "2020-04-01T16:48:50.767984Z"
+     "end_time": "2020-04-01T16:53:25.456935Z",
+     "start_time": "2020-04-01T16:53:25.442971Z"
     }
    },
    "outputs": [],
@@ -239,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:48:51.901727Z",
-     "start_time": "2020-04-01T16:48:51.753802Z"
+     "end_time": "2020-04-01T16:53:27.572919Z",
+     "start_time": "2020-04-01T16:53:27.409577Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e4c61a38f8641138a58ef4bc5f33176",
+       "model_id": "a939e426a4154aa78a1e38a485fb7dd3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -265,8 +265,7 @@
    "source": [
     "interact(logistic_covid, \n",
     "         covid19_df = fixed(Confirmed),\n",
-    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy')\n",
-    "        );"
+    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy'));"
    ]
   },
   {
