update nb interact

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:19.851997Z",
-     "start_time": "2020-04-01T16:53:18.574763Z"
+     "end_time": "2020-04-01T16:59:53.488623Z",
+     "start_time": "2020-04-01T16:59:53.469710Z"
     }
    },
    "outputs": [],
@@ -26,6 +26,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.optimize import fsolve\n",
+    "import scipy as scp\n",
     "\n",
     "from IPython.display import Image\n",
     "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
@@ -182,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:25.456935Z",
-     "start_time": "2020-04-01T16:53:25.442971Z"
+     "end_time": "2020-04-01T17:00:05.879730Z",
+     "start_time": "2020-04-01T17:00:05.871784Z"
     }
    },
    "outputs": [],
@@ -201,7 +202,7 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
-    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = scp.optimize.curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
     "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
@@ -239,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:27.572919Z",
-     "start_time": "2020-04-01T16:53:27.409577Z"
+     "end_time": "2020-04-01T17:00:10.148860Z",
+     "start_time": "2020-04-01T17:00:09.962996Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a939e426a4154aa78a1e38a485fb7dd3",
+       "model_id": "7a570ace424649b4bab3b85a387cda6e",
        "version_major": 2,
        "version_minor": 0
       },
