update nb interact

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:59:53.488623Z",
-     "start_time": "2020-04-01T16:59:53.469710Z"
+     "end_time": "2020-04-01T17:02:03.374450Z",
+     "start_time": "2020-04-01T17:02:03.367437Z"
     }
    },
    "outputs": [],
@@ -26,7 +26,7 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from scipy.optimize import curve_fit\n",
     "from scipy.optimize import fsolve\n",
-    "import scipy as scp\n",
+    "import scipy\n",
     "\n",
     "from IPython.display import Image\n",
     "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
@@ -183,11 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:00:05.879730Z",
-     "start_time": "2020-04-01T17:00:05.871784Z"
+     "end_time": "2020-04-01T17:02:11.786494Z",
+     "start_time": "2020-04-01T17:02:11.776566Z"
     }
    },
    "outputs": [],
@@ -202,7 +202,7 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
-    "    fit = scp.optimize.curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = scipy.optimize.curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
     "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
@@ -240,18 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:00:10.148860Z",
-     "start_time": "2020-04-01T17:00:09.962996Z"
+     "end_time": "2020-04-01T17:02:13.386459Z",
+     "start_time": "2020-04-01T17:02:13.206377Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a570ace424649b4bab3b85a387cda6e",
+       "model_id": "8eec92c72cc4431ea66752c92124f1eb",
        "version_major": 2,
        "version_minor": 0
       },
