--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:02:03.374450Z",
-     "start_time": "2020-04-01T17:02:03.367437Z"
+     "end_time": "2020-04-01T17:07:15.799191Z",
+     "start_time": "2020-04-01T17:07:14.599341Z"
     }
    },
    "outputs": [],
@@ -24,9 +24,7 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime,timedelta\n",
     "from sklearn.metrics import mean_squared_error\n",
-    "from scipy.optimize import curve_fit\n",
-    "from scipy.optimize import fsolve\n",
-    "import scipy\n",
+    "from scipy.optimize import curve_fit, fsolve\n",
     "\n",
     "from IPython.display import Image\n",
     "from ipywidgets import interact, fixed, ToggleButtons, IntSlider, FloatSlider, Dropdown, SelectMultiple, Layout\n",
@@ -56,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:21.222599Z",
-     "start_time": "2020-04-01T16:53:21.215634Z"
+     "end_time": "2020-04-01T17:07:16.722760Z",
+     "start_time": "2020-04-01T17:07:16.717770Z"
     }
    },
    "outputs": [],
@@ -79,8 +77,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:21.403045Z",
-     "start_time": "2020-04-01T16:53:21.399050Z"
+     "end_time": "2020-04-01T17:07:16.963310Z",
+     "start_time": "2020-04-01T17:07:16.958314Z"
     }
    },
    "outputs": [],
@@ -93,8 +91,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:22.490344Z",
-     "start_time": "2020-04-01T16:53:22.166916Z"
+     "end_time": "2020-04-01T17:07:17.539569Z",
+     "start_time": "2020-04-01T17:07:17.245920Z"
     }
    },
    "outputs": [],
@@ -114,8 +112,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:23.619252Z",
-     "start_time": "2020-04-01T16:53:23.606854Z"
+     "end_time": "2020-04-01T17:07:18.399601Z",
+     "start_time": "2020-04-01T17:07:18.389598Z"
     }
    },
    "outputs": [],
@@ -129,8 +127,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:23.784810Z",
-     "start_time": "2020-04-01T16:53:23.780821Z"
+     "end_time": "2020-04-01T17:07:18.827849Z",
+     "start_time": "2020-04-01T17:07:18.823897Z"
     }
    },
    "outputs": [],
@@ -143,8 +141,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:24.268098Z",
-     "start_time": "2020-04-01T16:53:24.255131Z"
+     "end_time": "2020-04-01T17:07:19.359668Z",
+     "start_time": "2020-04-01T17:07:19.341923Z"
     }
    },
    "outputs": [],
@@ -171,8 +169,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T16:53:25.180460Z",
-     "start_time": "2020-04-01T16:53:25.175443Z"
+     "end_time": "2020-04-01T17:07:20.327603Z",
+     "start_time": "2020-04-01T17:07:20.322629Z"
     }
    },
    "outputs": [],
@@ -183,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:02:11.786494Z",
-     "start_time": "2020-04-01T17:02:11.776566Z"
+     "end_time": "2020-04-01T17:07:20.654365Z",
+     "start_time": "2020-04-01T17:07:20.640404Z"
     }
    },
    "outputs": [],
@@ -202,7 +200,7 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
-    "    fit = scipy.optimize.curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
     "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
@@ -240,18 +238,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:02:13.386459Z",
-     "start_time": "2020-04-01T17:02:13.206377Z"
+     "end_time": "2020-04-01T17:07:22.174920Z",
+     "start_time": "2020-04-01T17:07:22.015141Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8eec92c72cc4431ea66752c92124f1eb",
+       "model_id": "2ffee64d34fa4b94ae0e411f30431051",
        "version_major": 2,
        "version_minor": 0
       },
