--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:15.799191Z",
-     "start_time": "2020-04-01T17:07:14.599341Z"
+     "end_time": "2020-04-01T17:13:02.645792Z",
+     "start_time": "2020-04-01T17:13:02.633694Z"
     }
    },
    "outputs": [],
@@ -44,19 +44,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Load data from JHU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:16.722760Z",
-     "start_time": "2020-04-01T17:07:16.717770Z"
-    }
+     "end_time": "2020-04-01T17:13:05.053626Z",
+     "start_time": "2020-04-01T17:13:05.045411Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -74,12 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:16.963310Z",
-     "start_time": "2020-04-01T17:07:16.958314Z"
-    }
+     "end_time": "2020-04-01T17:13:05.286245Z",
+     "start_time": "2020-04-01T17:13:05.278138Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -88,12 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:17.539569Z",
-     "start_time": "2020-04-01T17:07:17.245920Z"
-    }
+     "end_time": "2020-04-01T17:13:06.190654Z",
+     "start_time": "2020-04-01T17:13:05.959646Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -102,19 +107,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Structure dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:18.399601Z",
-     "start_time": "2020-04-01T17:07:18.389598Z"
-    }
+     "end_time": "2020-04-01T17:13:08.814113Z",
+     "start_time": "2020-04-01T17:13:08.803579Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -124,12 +132,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:18.827849Z",
-     "start_time": "2020-04-01T17:07:18.823897Z"
-    }
+     "end_time": "2020-04-01T17:13:08.965916Z",
+     "start_time": "2020-04-01T17:13:08.958424Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -143,7 +152,8 @@
     "ExecuteTime": {
      "end_time": "2020-04-01T17:07:19.359668Z",
      "start_time": "2020-04-01T17:07:19.341923Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -166,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:20.327603Z",
-     "start_time": "2020-04-01T17:07:20.322629Z"
+     "end_time": "2020-04-01T17:14:16.206049Z",
+     "start_time": "2020-04-01T17:14:16.198435Z"
     }
    },
    "outputs": [],
@@ -181,11 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:20.654365Z",
-     "start_time": "2020-04-01T17:07:20.640404Z"
+     "end_time": "2020-04-01T17:18:56.028888Z",
+     "start_time": "2020-04-01T17:18:56.022662Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def fitting_function(logistic_model, x, y,p0=[50,100,20000]):\n",
+    "    fit = curve_fit(logistic_model, x, y, p0)\n",
+    "    return(fit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-04-01T17:18:56.296149Z",
+     "start_time": "2020-04-01T17:18:56.275742Z"
     }
    },
    "outputs": [],
@@ -200,7 +226,7 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
-    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = fitting_function(logistic_model, x, y,p0=[50,100,20000])\n",
     "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
@@ -238,18 +264,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:07:22.174920Z",
-     "start_time": "2020-04-01T17:07:22.015141Z"
+     "end_time": "2020-04-01T17:18:58.239619Z",
+     "start_time": "2020-04-01T17:18:57.678729Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ffee64d34fa4b94ae0e411f30431051",
+       "model_id": "2ffcc9d38dcc41f7a0bf375c66adb797",
        "version_major": 2,
        "version_minor": 0
       },
