--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -191,27 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:18:56.028888Z",
-     "start_time": "2020-04-01T17:18:56.022662Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def fitting_function(logistic_model, x, y,p0=[50,100,20000]):\n",
-    "    fit = curve_fit(logistic_model, x, y, p0)\n",
-    "    return(fit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-01T17:18:56.296149Z",
-     "start_time": "2020-04-01T17:18:56.275742Z"
+     "end_time": "2020-04-01T17:20:27.052742Z",
+     "start_time": "2020-04-01T17:20:27.040649Z"
     }
    },
    "outputs": [],
@@ -226,7 +210,7 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
-    "    fit = fitting_function(logistic_model, x, y,p0=[50,100,20000])\n",
+    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
     "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
@@ -264,18 +248,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:18:58.239619Z",
-     "start_time": "2020-04-01T17:18:57.678729Z"
+     "end_time": "2020-04-01T17:20:29.273029Z",
+     "start_time": "2020-04-01T17:20:28.903373Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ffcc9d38dcc41f7a0bf375c66adb797",
+       "model_id": "bd7c1cd4d02d473788c21ef55c9a36b8",
        "version_major": 2,
        "version_minor": 0
       },
