--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -306,11 +306,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:56.455087Z",
-     "start_time": "2020-04-01T17:30:56.442246Z"
+     "end_time": "2020-04-01T17:35:23.577157Z",
+     "start_time": "2020-04-01T17:35:23.566625Z"
     }
    },
    "outputs": [],
@@ -334,7 +334,7 @@
     "    modeloutput.index = pd.date_range(start='1/20/2020', periods=len(timesteps))\n",
     "    \n",
     "    if plotFig:\n",
-    "        fig, axes = plt.subplots(1,1, figsize=(10,10))\n",
+    "        fig, axes = plt.subplots(1,1, figsize=(10,8))\n",
     "        axes.set_xlabel('time')\n",
     "        axes.set_ylabel('Population')\n",
     "\n",
@@ -362,18 +362,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:58.108711Z",
-     "start_time": "2020-04-01T17:30:57.608444Z"
+     "end_time": "2020-04-01T17:35:25.377065Z",
+     "start_time": "2020-04-01T17:35:24.894378Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97b75df3e0d64e5097637c7e8918cf5a",
+       "model_id": "6f1e9a408a444ae0acd7ddc465cc3ce3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -453,11 +453,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:59.966934Z",
-     "start_time": "2020-04-01T17:30:59.959553Z"
+     "end_time": "2020-04-01T17:38:38.311885Z",
+     "start_time": "2020-04-01T17:38:38.300126Z"
     }
    },
    "outputs": [],
@@ -468,7 +468,7 @@
     "    countries: list in columns of Confirmed\n",
     "    \n",
     "    \"\"\"\n",
-    "    fig, axes = plt.subplots(figsize=(15,10))\n",
+    "    fig, axes = plt.subplots(figsize=(15,8))\n",
     "    \n",
     "    df = infectionrate(Confirmed, countries, return_plot=False, return_df=True)\n",
     "\n",
@@ -476,7 +476,8 @@
     "    axes.legend(countries)\n",
     "    axes.set_title('Loglog')\n",
     "    axes.set_ylabel('Weekly increase of positive cases')\n",
-    "    axes.set_xlabel('Total cases globally')"
+    "    axes.set_xlabel('Total cases globally')\n",
+    "    axes.set_xlim([1e4,1e7])"
    ]
   },
   {
@@ -495,18 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:33:27.527139Z",
-     "start_time": "2020-04-01T17:33:26.730067Z"
+     "end_time": "2020-04-01T17:38:39.455960Z",
+     "start_time": "2020-04-01T17:38:38.728377Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84806bfc2dd84f629f896ffa3cc13c41",
+       "model_id": "d0e1ade392ab4b26b9fe1abc4321010a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,18 +553,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:31:05.075337Z",
-     "start_time": "2020-04-01T17:31:03.368958Z"
+     "end_time": "2020-04-01T17:39:19.457191Z",
+     "start_time": "2020-04-01T17:39:18.227109Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "300520b73def433da259bd363c7816aa",
+       "model_id": "68080b30311b4b92aab45f704a87ccf0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -581,7 +582,7 @@
     "         countries = SelectMultiple(options=list(Confirmed.columns), value=['Belgium', 'Italy', 'Spain', 'US'],\n",
     "                                 description='Select countries (Ctrl+ for multi-selection)', \n",
     "                                    style = {'description_width': 'initial'},\n",
-    "                                    layout=Layout(width='50%', height='100px')),\n",
+    "                                    layout=Layout(width='50%', height='200px')),\n",
     "         return_df= fixed(False));"
    ]
   },
