earlier plot ligistic function

--- a/covid19_interactiveModAndDA.ipynb
+++ b/covid19_interactiveModAndDA.ipynb
@@ -181,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:53.173576Z",
-     "start_time": "2020-04-01T17:30:53.158412Z"
+     "end_time": "2020-04-01T17:44:00.195561Z",
+     "start_time": "2020-04-01T17:44:00.178088Z"
     }
    },
    "outputs": [],
@@ -200,8 +200,12 @@
     "    \n",
     "    x = list(df.reset_index().index)\n",
     "    y = list(df.values)\n",
+    "    \n",
+    "#     Real data\n",
+    "    plt.scatter(x, y, label=\"Real data\", color=\"red\")\n",
+    "    \n",
+    "#     fit data\n",
     "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
-    "\n",
     "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
     "\n",
     "    a = fit[0][0]\n",
@@ -214,9 +218,6 @@
     "\n",
     "    sol = int(fsolve(lambda x : logistic_model(x,a,b,c) - int(c),b))\n",
     "    pred_x = list(range(max(x),sol))\n",
-    "    \n",
-    "    # Real data\n",
-    "    plt.scatter(x, y, label=\"Real data\", color=\"red\")\n",
     "\n",
     "    # Mdel data\n",
     "    plt.plot(x+pred_x, [logistic_model(i,fit[0][0],fit[0][1],fit[0][2]) for i in x+pred_x], label=\"Logistic model\");"
@@ -238,18 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-01T17:30:54.975244Z",
-     "start_time": "2020-04-01T17:30:54.657065Z"
+     "end_time": "2020-04-01T17:44:02.220146Z",
+     "start_time": "2020-04-01T17:44:01.893511Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "72f413039f804a30a5133810201126fd",
+       "model_id": "de276269805c4ad2acc869aa36b6c6b9",
        "version_major": 2,
        "version_minor": 0
       },
