rerun to strat widgets and created a new SIR dedicated nb

--- a/covid19_interactSIR.ipynb
+++ b/covid19_interactSIR.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:20.540435Z",
-     "start_time": "2020-04-02T06:21:20.531451Z"
+     "end_time": "2020-04-02T06:18:47.306918Z",
+     "start_time": "2020-04-02T06:18:45.673383Z"
     }
    },
    "outputs": [],
@@ -44,19 +44,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Load data from JHU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:21.154270Z",
-     "start_time": "2020-04-02T06:21:21.149318Z"
-    }
+     "end_time": "2020-04-02T06:18:47.844478Z",
+     "start_time": "2020-04-02T06:18:47.837531Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -74,12 +77,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:21.512097Z",
-     "start_time": "2020-04-02T06:21:21.508133Z"
-    }
+     "end_time": "2020-04-02T06:18:48.106777Z",
+     "start_time": "2020-04-02T06:18:48.102784Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -88,12 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:22.100342Z",
-     "start_time": "2020-04-02T06:21:21.885382Z"
-    }
+     "end_time": "2020-04-02T06:18:48.677294Z",
+     "start_time": "2020-04-02T06:18:48.378046Z"
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -109,11 +114,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:22.741134Z",
-     "start_time": "2020-04-02T06:21:22.734189Z"
+     "end_time": "2020-04-02T06:18:51.454413Z",
+     "start_time": "2020-04-02T06:18:51.433437Z"
     }
    },
    "outputs": [],
@@ -124,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:23.042931Z",
-     "start_time": "2020-04-02T06:21:23.038942Z"
+     "end_time": "2020-04-02T06:18:52.005333Z",
+     "start_time": "2020-04-02T06:18:52.001375Z"
     }
    },
    "outputs": [],
@@ -138,134 +143,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:23.383179Z",
-     "start_time": "2020-04-02T06:21:23.372209Z"
+     "end_time": "2020-04-02T06:18:52.704492Z",
+     "start_time": "2020-04-02T06:18:52.684518Z"
     }
    },
    "outputs": [],
    "source": [
     "Confirmed.index = pd.to_datetime(Confirmed.index)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Logistic model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspired by https://towardsdatascience.com/covid-19-infection-in-italy-mathematical-models-and-predictions-7784b4d7dd8d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:24.374970Z",
-     "start_time": "2020-04-02T06:21:24.371008Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def logistic_model(x,a,b,c):\n",
-    "    return c/(1+np.exp(-(x-b)/a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:24.816376Z",
-     "start_time": "2020-04-02T06:21:24.804376Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def logistic_covid(covid19_df, nation):\n",
-    "    \"\"\"\n",
-    "    df: dataframe of covid19 data with nations as columns and timestamp as index\n",
-    "    nation: string\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    df = covid19_df[nation]\n",
-    "    \n",
-    "    x = list(df.reset_index().index)\n",
-    "    y = list(df.values)\n",
-    "    \n",
-    "#     Real data\n",
-    "    plt.scatter(x, y, label=\"Real data\", color=\"red\")\n",
-    "    \n",
-    "#     fit data\n",
-    "    fit = curve_fit(logistic_model, x, y,p0=[50,100,20000])\n",
-    "    errors = [np.sqrt(fit[1][i][i]) for i in [0,1,2]]\n",
-    "\n",
-    "    a = fit[0][0]\n",
-    "    b = fit[0][1]\n",
-    "    c = fit[0][2]\n",
-    "\n",
-    "#     print('Infection speed '+str(round(a)))\n",
-    "    print('Maximum infections occurred on '+str(pd.to_datetime(df.index[0]) + pd.to_timedelta(round(b), unit='D')))\n",
-    "    print('Total predicted infected '+str(round(c))+ ' +-'+str(round(errors[2])))\n",
-    "\n",
-    "    sol = int(fsolve(lambda x : logistic_model(x,a,b,c) - int(c),b))\n",
-    "    pred_x = list(range(max(x),sol))\n",
-    "\n",
-    "    # Mdel data\n",
-    "    plt.plot(x+pred_x, [logistic_model(i,fit[0][0],fit[0][1],fit[0][2]) for i in x+pred_x], label=\"Logistic model\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run logistic model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fitting a logistic model on total cases of a country. Select the country and check the predicted peak of infections and total population"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:27.271476Z",
-     "start_time": "2020-04-02T06:21:27.119304Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4053d9a071914660b5c685d264a5ee3d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(Dropdown(description='nation', index=84, options=('Afghanistan', 'Albania', 'Algeria', '…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "interact(logistic_covid, \n",
-    "         covid19_df = fixed(Confirmed),\n",
-    "         nation = Dropdown(options=list(Confirmed.columns), value='Italy'));"
    ]
   },
   {
@@ -284,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:28.836092Z",
-     "start_time": "2020-04-02T06:21:28.829111Z"
+     "end_time": "2020-04-02T06:18:58.105064Z",
+     "start_time": "2020-04-02T06:18:58.101103Z"
     }
    },
    "outputs": [],
@@ -307,11 +194,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:29.049382Z",
-     "start_time": "2020-04-02T06:21:29.038376Z"
+     "end_time": "2020-04-02T06:18:59.184249Z",
+     "start_time": "2020-04-02T06:18:59.177266Z"
     }
    },
    "outputs": [],
@@ -363,18 +250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:30.575565Z",
-     "start_time": "2020-04-02T06:21:30.349601Z"
+     "end_time": "2020-04-02T06:19:05.420287Z",
+     "start_time": "2020-04-02T06:19:05.139003Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d96fe9d7e3642418f76b9c435b27aab",
+       "model_id": "870e0ba7dafa4acaa4627a278605bc13",
        "version_major": 2,
        "version_minor": 0
       },
@@ -430,11 +317,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:31.907830Z",
-     "start_time": "2020-04-02T06:21:31.900868Z"
+     "end_time": "2020-04-01T17:30:59.400829Z",
+     "start_time": "2020-04-01T17:30:59.388799Z"
     }
    },
    "outputs": [],
@@ -454,11 +341,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:32.317023Z",
-     "start_time": "2020-04-02T06:21:32.308046Z"
+     "end_time": "2020-04-01T17:38:38.311885Z",
+     "start_time": "2020-04-01T17:38:38.300126Z"
     }
    },
    "outputs": [],
@@ -497,18 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:34.219239Z",
-     "start_time": "2020-04-02T06:21:33.930377Z"
+     "end_time": "2020-04-01T17:38:39.455960Z",
+     "start_time": "2020-04-01T17:38:38.728377Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "074503c9e6c44c3f8acf6b8bc472baff",
+       "model_id": "d0e1ade392ab4b26b9fe1abc4321010a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,18 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-02T06:21:37.071517Z",
-     "start_time": "2020-04-02T06:21:36.436902Z"
+     "end_time": "2020-04-01T17:39:19.457191Z",
+     "start_time": "2020-04-01T17:39:18.227109Z"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "35d992adead648c79488f983866bcbc0",
+       "model_id": "68080b30311b4b92aab45f704a87ccf0",
        "version_major": 2,
        "version_minor": 0
       },
